# vienna-cyber-art-gen

./: Makefile  README.org  pyproject.toml
vienna_cyber_art_gen/: cli.py  generator.py
